--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -9,6 +9,10 @@
             type="com.udacity.shoestore.ui.login.LoginViewModel" />
     </data>
 
+    <!--
+        The widgets are arranged simply from top to bottom and
+        it's easily to layout with LinearLayout.
+    -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
