--- a/app/src/main/res/layout/shoe_list_item.xml
+++ b/app/src/main/res/layout/shoe_list_item.xml
@@ -5,34 +5,39 @@
 
     <data>
 
-        <import type="com.udacity.shoestore.utils.StringFormatter"/>
+        <import type="com.udacity.shoestore.utils.StringFormatter" />
 
         <variable
             name="shoe"
             type="com.udacity.shoestore.models.Shoe" />
     </data>
 
+    <!--
+        This layout is a bit complex and if we use the LinearLayout, we have to use nested LinearLayout.
+        With ConstraintLayout, we can achieve only with single flat view group.
+    -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <FrameLayout
+        <View
             android:id="@+id/thumbnail_frame"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:background="@drawable/shoe_thumbnail_background"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <com.google.android.material.imageview.ShapeableImageView
-                android:id="@+id/thumbnail"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_gravity="center"
-                android:src="@drawable/shoe_thumbnail_placeholder"
-                app:tint="?colorOnPrimary" />
-
-        </FrameLayout>
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/thumbnail"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/shoe_thumbnail_placeholder"
+            app:layout_constraintBottom_toBottomOf="@id/thumbnail_frame"
+            app:layout_constraintEnd_toEndOf="@id/thumbnail_frame"
+            app:layout_constraintStart_toStartOf="@id/thumbnail_frame"
+            app:layout_constraintTop_toTopOf="@id/thumbnail_frame"
+            app:tint="?colorOnPrimary" />
 
         <TextView
             android:id="@+id/shoe_name_company"
